--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   zego_uikit_prebuilt_call: ^3.1.0
   zego_uikit_signaling_plugin: ^2.0.3
   zego_uikit_prebuilt_live_streaming: ^2.3.6
+  flutter_riverpod: ^2.3.5
 
 dev_dependencies:
   flutter_test:
@@ -63,8 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
