--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   zego_uikit_signaling_plugin: ^2.0.3
   zego_uikit_prebuilt_live_streaming: ^2.3.6
   flutter_riverpod: ^2.3.5
+  firebase_core: ^2.10.0
+  cloud_firestore: ^4.5.2
+  firebase_auth: ^4.4.2
 
 dev_dependencies:
   flutter_test:
